# Order-Matching-Engine

./: .gitignore  CMakeLists.txt  README.md  book_builder.cpp  book_builder.h  build.sh  central_order_book.cc  central_order_book.hh  main.cpp  order.cc  order.hh  order_test.cc  orderbook.cc  orderbook.hh  orderbook_test.cc  ordermatching.cc  utils.cpp  utils.h
OrderMatcher/: central_order_book.cc  central_order_book.hh  order.hh  orderbook.cc  orderbook.hh  ordermatching.cc
Parser/: message.cpp  message.h  reader.cpp  reader.h  utils.cpp  utils.h  writer.cpp  writer.h
src/: order.cc  order.hh  orderbook.cc  orderbook.hh  ordermatching.cc
test/: orderbook_test.cc
